--- a/DVLD/DVLD.csproj
+++ b/DVLD/DVLD.csproj
@@ -58,6 +58,12 @@
     <Compile Include="ctrlListContent.Designer.cs">
       <DependentUpon>ctrlListContent.cs</DependentUpon>
     </Compile>
+    <Compile Include="ctrlLocalDrivingLicenseApplicationCard.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ctrlLocalDrivingLicenseApplicationCard.Designer.cs">
+      <DependentUpon>ctrlLocalDrivingLicenseApplicationCard.cs</DependentUpon>
+    </Compile>
     <Compile Include="ctrlPasswordGenerator.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -117,6 +123,12 @@
     </Compile>
     <Compile Include="Manage_Applications_Forms\Manage_Application_Types_Forms\frmUpdateApplicationType.Designer.cs">
       <DependentUpon>frmUpdateApplicationType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_Local_Driving_License_Applications_Tests\frmScheduleVisionTestAppointment.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_Local_Driving_License_Applications_Tests\frmScheduleVisionTestAppointment.Designer.cs">
+      <DependentUpon>frmScheduleVisionTestAppointment.cs</DependentUpon>
     </Compile>
     <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_New_Driver_License_Forms\frmAddNewLocalDrivingLicenseApplication.cs">
       <SubType>Form</SubType>
@@ -186,6 +198,9 @@
     <EmbeddedResource Include="ctrlListContent.resx">
       <DependentUpon>ctrlListContent.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ctrlLocalDrivingLicenseApplicationCard.resx">
+      <DependentUpon>ctrlLocalDrivingLicenseApplicationCard.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ctrlPasswordGenerator.resx">
       <DependentUpon>ctrlPasswordGenerator.cs</DependentUpon>
     </EmbeddedResource>
@@ -212,6 +227,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Manage_Applications_Forms\Manage_Application_Types_Forms\frmUpdateApplicationType.resx">
       <DependentUpon>frmUpdateApplicationType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_Local_Driving_License_Applications_Tests\frmScheduleVisionTestAppointment.resx">
+      <DependentUpon>frmScheduleVisionTestAppointment.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_New_Driver_License_Forms\frmAddNewLocalDrivingLicenseApplication.resx">
       <DependentUpon>frmAddNewLocalDrivingLicenseApplication.cs</DependentUpon>
@@ -425,6 +443,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Written_Test.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Vision_Test_2.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
