--- a/DVLDBusinessLayer/DVLDBusinessLayer.csproj
+++ b/DVLDBusinessLayer/DVLDBusinessLayer.csproj
@@ -48,6 +48,7 @@
     <Compile Include="clsLicenseClass.cs" />
     <Compile Include="clsLocalDrivingApplication .cs" />
     <Compile Include="clsPerson.cs" />
+    <Compile Include="clsTestAppointment.cs" />
     <Compile Include="clsTestType.cs" />
     <Compile Include="clsUser.cs" />
     <Compile Include="clsUserPermission.cs" />
