--- a/DVLD/DVLD.csproj
+++ b/DVLD/DVLD.csproj
@@ -124,11 +124,11 @@
     <Compile Include="Manage_Applications_Forms\Manage_Application_Types_Forms\frmUpdateApplicationType.Designer.cs">
       <DependentUpon>frmUpdateApplicationType.cs</DependentUpon>
     </Compile>
-    <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_Local_Driving_License_Applications_Tests\frmAddEditVisionTest.cs">
+    <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_Local_Driving_License_Applications_Tests\frmAddEditTest.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_Local_Driving_License_Applications_Tests\frmAddEditVisionTest.Designer.cs">
-      <DependentUpon>frmAddEditVisionTest.cs</DependentUpon>
+    <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_Local_Driving_License_Applications_Tests\frmAddEditTest.Designer.cs">
+      <DependentUpon>frmAddEditTest.cs</DependentUpon>
     </Compile>
     <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_Local_Driving_License_Applications_Tests\frmScheduleVisionTestAppointment.cs">
       <SubType>Form</SubType>
@@ -234,8 +234,8 @@
     <EmbeddedResource Include="Manage_Applications_Forms\Manage_Application_Types_Forms\frmUpdateApplicationType.resx">
       <DependentUpon>frmUpdateApplicationType.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_Local_Driving_License_Applications_Tests\frmAddEditVisionTest.resx">
-      <DependentUpon>frmAddEditVisionTest.cs</DependentUpon>
+    <EmbeddedResource Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_Local_Driving_License_Applications_Tests\frmAddEditTest.resx">
+      <DependentUpon>frmAddEditTest.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_Local_Driving_License_Applications_Tests\frmScheduleVisionTestAppointment.resx">
       <DependentUpon>frmScheduleVisionTestAppointment.cs</DependentUpon>
@@ -455,6 +455,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Vision_Test_2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Trials.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
