--- a/DVLDBusinessLayer/DVLDBusinessLayer.csproj
+++ b/DVLDBusinessLayer/DVLDBusinessLayer.csproj
@@ -53,6 +53,7 @@
     <Compile Include="clsUser.cs" />
     <Compile Include="clsUserPermission.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="clsTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DVLDDataAccessLayer\DVLDDataAccessLayer.csproj">
