--- a/DVLDDataAccessLayer/DVLDDataAccessLayer.csproj
+++ b/DVLDDataAccessLayer/DVLDDataAccessLayer.csproj
@@ -51,6 +51,7 @@
     <Compile Include="clsTestTypeData.cs" />
     <Compile Include="clsUserData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="clsTestData.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
