--- a/DVLD/DVLD.csproj
+++ b/DVLD/DVLD.csproj
@@ -142,11 +142,17 @@
     <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_Local_Driving_License_Applications_Tests\frmTakeTest.Designer.cs">
       <DependentUpon>frmTakeTest.cs</DependentUpon>
     </Compile>
-    <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_New_Driver_License_Forms\frmAddNewLocalDrivingLicenseApplication.cs">
+    <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_New_Driver_License_Forms\frmAddEditLocalDrivingLicenseApplication.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_New_Driver_License_Forms\frmAddNewLocalDrivingLicenseApplication.Designer.cs">
-      <DependentUpon>frmAddNewLocalDrivingLicenseApplication.cs</DependentUpon>
+    <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_New_Driver_License_Forms\frmAddEditLocalDrivingLicenseApplication.Designer.cs">
+      <DependentUpon>frmAddEditLocalDrivingLicenseApplication.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_New_Driver_License_Forms\frmLocalDrivingLicenseApplicationDetials.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_New_Driver_License_Forms\frmLocalDrivingLicenseApplicationDetials.Designer.cs">
+      <DependentUpon>frmLocalDrivingLicenseApplicationDetials.cs</DependentUpon>
     </Compile>
     <Compile Include="Manage_Applications_Forms\Manage_Test_Types_Forms\frmManageTestTypes.cs">
       <SubType>Form</SubType>
@@ -249,8 +255,11 @@
     <EmbeddedResource Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_Local_Driving_License_Applications_Tests\frmTakeTest.resx">
       <DependentUpon>frmTakeTest.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_New_Driver_License_Forms\frmAddNewLocalDrivingLicenseApplication.resx">
-      <DependentUpon>frmAddNewLocalDrivingLicenseApplication.cs</DependentUpon>
+    <EmbeddedResource Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_New_Driver_License_Forms\frmAddEditLocalDrivingLicenseApplication.resx">
+      <DependentUpon>frmAddEditLocalDrivingLicenseApplication.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_New_Driver_License_Forms\frmLocalDrivingLicenseApplicationDetials.resx">
+      <DependentUpon>frmLocalDrivingLicenseApplicationDetials.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Manage_Applications_Forms\Manage_Test_Types_Forms\frmManageTestTypes.resx">
       <DependentUpon>frmManageTestTypes.cs</DependentUpon>
@@ -467,6 +476,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Trials.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Driving-License.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Show-Application-Details.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Edit-Application.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
