--- a/DVLDDataAccessLayer/DVLDDataAccessLayer.csproj
+++ b/DVLDDataAccessLayer/DVLDDataAccessLayer.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="clsLicenseData.cs" />
     <Compile Include="clsLocalDrivingApplicationData.cs" />
     <Compile Include="clsApplicationTypeData.cs" />
     <Compile Include="clsCountryData.cs" />
