--- a/DVLD/DVLD.csproj
+++ b/DVLD/DVLD.csproj
@@ -52,11 +52,23 @@
     <Compile Include="ctrlAddEditPersonForm.Designer.cs">
       <DependentUpon>ctrlAddEditPersonForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ctrlInternationalLicenseCard.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ctrlInternationalLicenseCard.Designer.cs">
+      <DependentUpon>ctrlInternationalLicenseCard.cs</DependentUpon>
+    </Compile>
     <Compile Include="ctrlLicenseCard.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="ctrlLicenseCard.Designer.cs">
       <DependentUpon>ctrlLicenseCard.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ctrlLicensesFilter.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ctrlLicensesFilter.Designer.cs">
+      <DependentUpon>ctrlLicensesFilter.cs</DependentUpon>
     </Compile>
     <Compile Include="ctrlListContent.cs">
       <SubType>UserControl</SubType>
@@ -112,6 +124,12 @@
     <Compile Include="frmMainForm.Designer.cs">
       <DependentUpon>frmMainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Manage_Applications_Forms\frmManageInternationalDrivingLicenseApplications.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Manage_Applications_Forms\frmManageInternationalDrivingLicenseApplications.Designer.cs">
+      <DependentUpon>frmManageInternationalDrivingLicenseApplications.cs</DependentUpon>
+    </Compile>
     <Compile Include="Manage_Applications_Forms\frmManageLocalDrivingLicenseApplications.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -130,10 +148,22 @@
     <Compile Include="Manage_Applications_Forms\Manage_Application_Types_Forms\frmUpdateApplicationType.Designer.cs">
       <DependentUpon>frmUpdateApplicationType.cs</DependentUpon>
     </Compile>
-    <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\frmIssueDrivingLicenseFirstTime.cs">
+    <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\frmInternationalLicenseDetails.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\frmIssueDrivingLicenseFirstTime.Designer.cs">
+    <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\frmInternationalLicenseDetails.Designer.cs">
+      <DependentUpon>frmInternationalLicenseDetails.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_New_International_Driver_License_Forms\frmAddNewInternationalDrivingLicenseApplication.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_New_International_Driver_License_Forms\frmAddNewInternationalDrivingLicenseApplication.Designer.cs">
+      <DependentUpon>frmAddNewInternationalDrivingLicenseApplication.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_New_Local_Driver_License_Forms\frmIssueDrivingLicenseFirstTime.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_New_Local_Driver_License_Forms\frmIssueDrivingLicenseFirstTime.Designer.cs">
       <DependentUpon>frmIssueDrivingLicenseFirstTime.cs</DependentUpon>
     </Compile>
     <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\frmLicenseDetails.cs">
@@ -166,16 +196,16 @@
     <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_Local_Driving_License_Applications_Tests\frmTakeTest.Designer.cs">
       <DependentUpon>frmTakeTest.cs</DependentUpon>
     </Compile>
-    <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_New_Driver_License_Forms\frmAddEditLocalDrivingLicenseApplication.cs">
+    <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_New_Local_Driver_License_Forms\frmAddEditLocalDrivingLicenseApplication.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_New_Driver_License_Forms\frmAddEditLocalDrivingLicenseApplication.Designer.cs">
+    <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_New_Local_Driver_License_Forms\frmAddEditLocalDrivingLicenseApplication.Designer.cs">
       <DependentUpon>frmAddEditLocalDrivingLicenseApplication.cs</DependentUpon>
     </Compile>
-    <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_New_Driver_License_Forms\frmLocalDrivingLicenseApplicationDetials.cs">
+    <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_New_Local_Driver_License_Forms\frmLocalDrivingLicenseApplicationDetials.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_New_Driver_License_Forms\frmLocalDrivingLicenseApplicationDetials.Designer.cs">
+    <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_New_Local_Driver_License_Forms\frmLocalDrivingLicenseApplicationDetials.Designer.cs">
       <DependentUpon>frmLocalDrivingLicenseApplicationDetials.cs</DependentUpon>
     </Compile>
     <Compile Include="Manage_Applications_Forms\Manage_Test_Types_Forms\frmManageTestTypes.cs">
@@ -243,8 +273,14 @@
     <EmbeddedResource Include="ctrlAddEditPersonForm.resx">
       <DependentUpon>ctrlAddEditPersonForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ctrlInternationalLicenseCard.resx">
+      <DependentUpon>ctrlInternationalLicenseCard.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ctrlLicenseCard.resx">
       <DependentUpon>ctrlLicenseCard.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ctrlLicensesFilter.resx">
+      <DependentUpon>ctrlLicensesFilter.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ctrlListContent.resx">
       <DependentUpon>ctrlListContent.cs</DependentUpon>
@@ -270,6 +306,9 @@
     <EmbeddedResource Include="frmMainForm.resx">
       <DependentUpon>frmMainForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Manage_Applications_Forms\frmManageInternationalDrivingLicenseApplications.resx">
+      <DependentUpon>frmManageInternationalDrivingLicenseApplications.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Manage_Applications_Forms\frmManageLocalDrivingLicenseApplications.resx">
       <DependentUpon>frmManageLocalDrivingLicenseApplications.cs</DependentUpon>
     </EmbeddedResource>
@@ -279,7 +318,13 @@
     <EmbeddedResource Include="Manage_Applications_Forms\Manage_Application_Types_Forms\frmUpdateApplicationType.resx">
       <DependentUpon>frmUpdateApplicationType.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\frmIssueDrivingLicenseFirstTime.resx">
+    <EmbeddedResource Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\frmInternationalLicenseDetails.resx">
+      <DependentUpon>frmInternationalLicenseDetails.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_New_International_Driver_License_Forms\frmAddNewInternationalDrivingLicenseApplication.resx">
+      <DependentUpon>frmAddNewInternationalDrivingLicenseApplication.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_New_Local_Driver_License_Forms\frmIssueDrivingLicenseFirstTime.resx">
       <DependentUpon>frmIssueDrivingLicenseFirstTime.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\frmLicenseDetails.resx">
@@ -297,10 +342,10 @@
     <EmbeddedResource Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_Local_Driving_License_Applications_Tests\frmTakeTest.resx">
       <DependentUpon>frmTakeTest.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_New_Driver_License_Forms\frmAddEditLocalDrivingLicenseApplication.resx">
+    <EmbeddedResource Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_New_Local_Driver_License_Forms\frmAddEditLocalDrivingLicenseApplication.resx">
       <DependentUpon>frmAddEditLocalDrivingLicenseApplication.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_New_Driver_License_Forms\frmLocalDrivingLicenseApplicationDetials.resx">
+    <EmbeddedResource Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_New_Local_Driver_License_Forms\frmLocalDrivingLicenseApplicationDetials.resx">
       <DependentUpon>frmLocalDrivingLicenseApplicationDetials.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Manage_Applications_Forms\Manage_Test_Types_Forms\frmManageTestTypes.resx">
@@ -545,6 +590,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\License_History_2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\International.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\International_2.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
