--- a/DVLDDataAccessLayer/DVLDDataAccessLayer.csproj
+++ b/DVLDDataAccessLayer/DVLDDataAccessLayer.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="clsDriverData.cs" />
+    <Compile Include="clsInternationalLicenseData.cs" />
     <Compile Include="clsLicenseData.cs" />
     <Compile Include="clsLocalDrivingApplicationData.cs" />
     <Compile Include="clsApplicationTypeData.cs" />
