--- a/DVLD/DVLD.csproj
+++ b/DVLD/DVLD.csproj
@@ -148,6 +148,12 @@
     <Compile Include="Manage_Applications_Forms\Manage_Application_Types_Forms\frmUpdateApplicationType.Designer.cs">
       <DependentUpon>frmUpdateApplicationType.cs</DependentUpon>
     </Compile>
+    <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\frmDetainLicense.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\frmDetainLicense.Designer.cs">
+      <DependentUpon>frmDetainLicense.cs</DependentUpon>
+    </Compile>
     <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\frmInternationalLicenseDetails.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -159,6 +165,12 @@
     </Compile>
     <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\frmRenewDriverLicense.Designer.cs">
       <DependentUpon>frmRenewDriverLicense.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\frmReplacementForDamagedOrLostLicenses.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\frmReplacementForDamagedOrLostLicenses.Designer.cs">
+      <DependentUpon>frmReplacementForDamagedOrLostLicenses.cs</DependentUpon>
     </Compile>
     <Compile Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_New_International_Driver_License_Forms\frmAddNewInternationalDrivingLicenseApplication.cs">
       <SubType>Form</SubType>
@@ -324,11 +336,17 @@
     <EmbeddedResource Include="Manage_Applications_Forms\Manage_Application_Types_Forms\frmUpdateApplicationType.resx">
       <DependentUpon>frmUpdateApplicationType.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\frmDetainLicense.resx">
+      <DependentUpon>frmDetainLicense.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\frmInternationalLicenseDetails.resx">
       <DependentUpon>frmInternationalLicenseDetails.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\frmRenewDriverLicense.resx">
       <DependentUpon>frmRenewDriverLicense.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\frmReplacementForDamagedOrLostLicenses.resx">
+      <DependentUpon>frmReplacementForDamagedOrLostLicenses.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Manage_Applications_Forms\Manage_Driver_License_Services_Forms\Manage_New_International_Driver_License_Forms\frmAddNewInternationalDrivingLicenseApplication.resx">
       <DependentUpon>frmAddNewInternationalDrivingLicenseApplication.cs</DependentUpon>
@@ -605,6 +623,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\International_2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\RenewLicense.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\DamagedOrLostLicense.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ReleaseDetainLicense.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
