--- a/DVLDBusinessLayer/DVLDBusinessLayer.csproj
+++ b/DVLDBusinessLayer/DVLDBusinessLayer.csproj
@@ -44,6 +44,7 @@
     <Compile Include="clsApplication.cs" />
     <Compile Include="clsApplicationType.cs" />
     <Compile Include="clsCountry.cs" />
+    <Compile Include="clsDetainLicense.cs" />
     <Compile Include="clsDriver.cs" />
     <Compile Include="clsGlobal.cs" />
     <Compile Include="clsInternationalLicense.cs" />
