--- a/DVLDDataAccessLayer/DVLDDataAccessLayer.csproj
+++ b/DVLDDataAccessLayer/DVLDDataAccessLayer.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="clsDetainLicenseData.cs" />
     <Compile Include="clsDriverData.cs" />
     <Compile Include="clsInternationalLicenseData.cs" />
     <Compile Include="clsLicenseData.cs" />
